// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders while running 1`] = `
<div
  class="sc-dlfmnT hFZekq"
>
  <div
    class="sc-eCstFB dPfZIq"
  >
    <span
      class="sc-jSgtCu"
    >
      0
    </span>
    <span
      class="sc-gKsdJj hmBGpW"
    >
      42
    </span>
  </div>
  <button
    class="sc-bdfCkl sc-gsTChe hmUCm ccTOYN"
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  class="sc-dlfmnT hFZekq"
>
  <div
    class="sc-hKgJyM iPOiSI"
  >
    🛌🛌
  </div>
  <button
    class="sc-bdfCkl sc-gsTChe ePIxA-d ccTOYN"
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  class="sc-dlfmnT hFZekq"
>
  <div
    class="sc-hKgJyM iPOiSI"
  >
    🍅
  </div>
  <button
    class="sc-bdfCkl sc-gsTChe ePIxA-d ccTOYN"
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  class="sc-dlfmnT hFZekq"
>
  <div
    class="sc-hKgJyM iPOiSI"
  >
    🛌
  </div>
  <button
    class="sc-bdfCkl sc-gsTChe ePIxA-d ccTOYN"
  >
    Start
  </button>
</div>
`;
